payroll  validate  and mark  as  read  bug  fixed
